# FHIR_medications_app

./: README.md
fhir-meds/: README.md  pyproject.toml
fhir-meds/src/fhirmeds/: app.py  dbSetup.py
fhir-meds/src/fhirmeds/scripts/js/: validation.js
fhir-meds/src/fhirmeds/scripts/py/: dbSchema.py  mysqlDB.py
fhir-meds/src/fhirmeds/templates/: home.html  reminders.html
